fixed footer color and header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap');
 
 body {
-  padding-top: 90px;
+  padding-top: 110px;
   background: #fff;
   font-family: 'Outfit', sans-serif;
   font-weight: 400;
@@ -132,7 +132,9 @@ ul.nostyle i {
 }
 
 .navbar-nav>li>a {
-  text-transform: uppercase;
+  text-transform: none;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 @-webkit-keyframes scaleIn {
@@ -880,14 +882,14 @@ ul.nostyle i {
 ********* Footer ******
 ************************/
 #footer {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  color: #282828;
-  background: #f9f9f9;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #fff;
+  background: #222;
 }
 
 #footer a {
-  color: #64748b;
+  color: #a0aec0;
 }
 
 #footer a:hover {
